2007-11-24  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Infector.h:
	  Enlarge fixed PWMBuffers. Remove debug log.

2007-11-23  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Vegetable.cpp:
	  More debug logging. Enable destructor.

2007-11-23  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Infector.h:
	  Some more debug logging and cleanups.

2007-11-21  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Infector/Channel.cpp:
	* FSM/Infector/Filters.cpp:
	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Track.cpp:
	* FSM/Infector/Vegetable.cpp:
	* FSM/Makefile.am:
	* FSM/dspchips/DSPChips.h:
	  Cleanup the sources a bit. Try to free the generated wave, but
	  disabled now as valgrind does not yet like it.

2007-11-19  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Makefile.am:
	* FSM/dspchips/DSPChips.h:
	  More porting. Now loads fine.

2007-11-13  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Also create Makefile for Infector, but not yet build by default.

2007-11-13  Krzysztof Foltman  <kfoltman@users.sourceforge.net>

	* FSM/Infector/Channel.cpp:
	* FSM/Infector/Filters.cpp:
	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Infector.h:
	* FSM/Infector/Makefile.am:
	* FSM/Infector/Track.cpp:
	* FSM/Infector/Vegetable.cpp:
	  Preliminary commit just to get things going, it's not like it's going
	  to compile or anything - FFT library and the GUI are still missing.

2007-11-12  Stefan Kost  <ensonic@users.sf.net>

	* FSM/dspchips/DSPChips.h:
	  We don't seem to need the fft include.

2007-11-10  Stefan Kost  <ensonic@users.sf.net>

	* FSM/ArpMan/ArpMan.cpp:
	* FSM/ArpMan/Makefile.am:
	* FSM/Chorus/Chorus.cpp:
	* FSM/Chorus/Makefile.am:
	* FSM/Kick/Kick.cpp:
	* FSM/Kick/Makefile.am:
	* FSM/Makefile.am:
	* FSM/dspchips/DSPChips.h:
	* Makefile.am:
	* common/Makefile.am:
	* common/dsplib.h:
	* common/mdk/Makefile.am: